Theme/ElegantFin-theme-nightly.css
/* ... */
.listItemIcon.notifications:not(.listItemIcon-transparent),
.listItemIcon.schedule:not(.listItemIcon-transparent),
.listItemIcon.person:not(.listItemIcon-transparent),
.listItemIcon.live_tv:not(.listItemIcon-transparent) {
    background-color: rgb(41, 49, 83) !important;
    border: var(--defaultBorder);
}

.readOnlyContent {
    flex-direction: column !important;
}

.MuiAppBar-root {
    background: var(--headerColor);
    backdrop-filter: var(--blurDefault);
    border-bottom: var(--defaultBorder);
}

.MuiDrawer-paper {
    background: var(--drawerColor);
    backdrop-filter: var(--blurLarge);
    border-right: var(--defaultBorder);
    padding: 0.25em;
}

.listItemImage {
    border-radius: var(--smallRadius);
    margin-right: 0.75em !important;
    border: var(--defaultBorder);
}

[dir="ltr"] .listItem:not(.actionSheetMenuItem, .childrenItemsContainer .listItem, .activityLogListWidget .listItem) {
    padding: 0.375em !important;
}

[dir="ltr"]
    .listItem:not(.actionSheetMenuItem, .childrenItemsContainer .listItem, .activityLogListWidget .listItem):not(
        :last-child
    ) {
    margin-bottom: 0.5em;
}

[dir="ltr"] .listItem:not(.actionSheetMenuItem)[data-type="Episode"] {
    padding: 0.375em;
    margin-bottom: 0.5em;
}

.layout-mobile #songsTab .listItem[data-type="Audio"],
.layout-mobile #playlist .listItem[data-type="Audio"] {
    margin: auto 1em;
}

.listItem[data-type="Audio"]:has(.playlistIndexIndicatorImage) .listItemBodyText {
    color: white;
    font-weight: 600;
}

.listItem[data-type="Audio"]:has(.playlistIndexIndicatorImage):not(:hover) {
    background-color: rgba(255, 255, 255, 0.07);
}

/* [dir="ltr"] .listItem:not(.actionSheetMenuItem)[data-type="Episode"] .listItemBodyText:not(.secondary) {
    font-size: 1.17em;
    font-weight: 600;
} */

.listItem-largeImage .listItemBodyText:not(.secondary) {
    font-size: 1.17em;
    font-weight: 600;
    color: var(--textColor);
}

.listItemBodyText.secondary {
    color: var(--dimTextColor);
}

.listItemBody > .listItemBodyText:not(.secondary) {
    display: -webkit-box;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
    overflow: hidden;
    color: var(--textColor);
}

.listItem-overview {
    display: -webkit-box;
    -webkit-line-clamp: 4;
    -webkit-box-orient: vertical;
    overflow: hidden;
}

.listItem-bottomoverview,
[dir="ltr"] .listItem:not(.actionSheetMenuItem)[data-type="Episode"] .listItem-overview p {
    margin-top: 0.75em;
    margin-bottom: 0em;
}

.listItem,
.navMenuOption {
    border-radius: 0.7em;
}

.listItem:hover,
.navMenuOption:hover {
    background: unset;
    border-radius: 0.7em;
}

.listItem:focus {
    background: var(--highlightOutlineColor);
}

.listItem:active,
.navMenuOption:active {
    background: rgba(255, 255, 255, 0.125);
}

.listItem-border {
    border-color: transparent !important;
}

.listItem-border.emby-button.show-focus:focus {
    border-radius: var(--smallRadius);
}

.MuiListItem-root > a,
.MuiList-root > a,
.MuiListItem-root > div {
    border: solid transparent var(--borderWidth);
    border-radius: 0.7em;
    /* margin: 0.25em 0.5em !important; */
}

.Mui-selected {
    background-color: var(--activeColor) !important;
}

.actionsheetDivider {
    height: 2px;
    background: rgb(255, 255, 255, 0.05);
}

.actionsheet-xlargeFont {
    line-height: normal;
}

.actionSheetContent {
    padding: 0.4em !important;
}

.actionSheetContent > h1 {
    font-size: unset;
}

[dir="ltr"] .actionsheetMenuItemIcon {
    margin: 0 0.2em 0 0.45em !important;
}

/* [dir="ltr"] .actionsheetMenuItemIcon.check {
    margin: 0 0.45em 0 0.45em !important;
} */

.actionSheetMenuItem:has(.listItemIcon.check) {
    background-color: var(--activeColor);
}

.actionSheetMenuItem:has(.listItemIcon.check) .listItemBodyText {
    color: white;
}

.actionSheetMenuItem:has(.listItemIcon.check) .listItemIcon.check {
    display: none;
}

.actionSheetMenuItem:has(.listItemIcon.check[style*="hidden"]) {
    background-color: transparent;
}

.actionSheetMenuItem:has(.listItemIcon.check[style*="hidden"]):active {
    background-color: rgba(255, 255, 255, 0.125);
}

.navMenuOption {
    border-radius: var(--smallRadius) !important;
    margin: 0em 1em !important;
}

[dir="ltr"] .navMenuOption {
    padding: 0.75em 1em !important;
    margin-bottom: unset;
}

#myPreferencesMenuPage .listItemIcon {
    margin-left: 0.5em;
    margin-right: 0.25em;
}

.navMenuOption-selected {
    background-color: var(--activeColor) !important;
}

#itemDetailPage .detailSection {
    display: grid;
    row-gap: 1em;
    column-gap: 3em;
    max-width: unset !important;
    grid-template-columns: 1.3fr 0.7fr 1fr 1fr;
    margin-bottom: 1.5em;
}

.layout-mobile .detailSection {
    grid-template-columns: 1fr !important;
}

.detailPageContent {
    gap: 1em;
}

.trackSelections {
    order: 3;
    max-width: unset !important;
    margin-top: 1em;
    border: var(--defaultBorder);
    border-radius: var(--smallRadius);
    padding: 1em;
    grid-column: 3 / 5;
    background-color: var(--lighterGradientPointAlpha);
}

.layout-mobile .trackSelections {
    margin-top: 0;
}

.layout-tv .trackSelections {
    order: 2;
}

.recordingFields {
    order: 4;
}

.recordingButton {
    gap: 1ch;
}

.detailsGroupItem,
.trackSelections .selectContainer {
    max-width: unset !important;
    align-items: baseline;
}

.selectArrowContainer {
    top: 0em;
    opacity: 0.5;
}

.trackSelectionFieldContainer > .selectArrowContainer {
    top: 0.5em;
}

.trackSelectionFieldContainer > label {
    max-width: 2.75em;
    background-repeat: no-repeat;
    color: transparent;
    transform: scale(0.9);
}
/* ... */

